<resources>
    <string name="app_name">Aire Libre</string>
    <string name="titleName">A|L</string>

    <!---HomeActivity-->
    <string name="tvSensor">Sensor:</string>
    <string name="tvSensorCloser">Sensor más cercano:</string>
    <string name="tvTitleList">Sensores</string>
    <string name="tvEscale">Escala AQI</string>
    <string name="tvStatus">Estado</string>
    <string name="tvDistance">Distancia</string>
    <string name="tvNotifyTitle">Notificaciones</string>
    <string name="tvNotifyFilter">NotifyFilter</string>
    <string name="tvHelp">Es un índice utilizado por agencias ambientales para medir la calidad del aire, cuanto más alto su valor, el nivel de contaminación es mayor.</string>
    <string name="emojiGreen">🟢👍</string>
    <string name="emojiYellow">🟡😐</string>
    <string name="emojiOrange">🟠⚠</string>
    <string name="emojiRed">🔴⚠</string>
    <string name="emojiPurple">🟣☣️</string>
    <string name="emojiDanger">🟤☠️</string>
    <string name="tvDescriptionGreen">Escaso riesgo de contaminación atmosférica, calidad de aire satisfactoria.</string>
    <string name="tvDescriptionYellow">Calidad de aire aceptable, riesgo moderado para la salud de personas sensibles a la contaminación ambiental.</string>
    <string name="tvDescriptionOrange">Insalubre para personas sensibles.</string>
    <string name="tvDescriptionRed">Riesgo general para las personas, efectos más graves en personas sensibles.</string>
    <string name="tvDescriptionPurple">Condición de emergencia.</string>
    <string name="tvDescriptionDanger">Alerta sanitaria, efectos graves para toda la población.</string>
    <string name="toastErrorNet">Sin conexión compruebe su conexión</string>
    <string name="toastErrorRetry">Hubo un problema intente de nuevo</string>
    <string name="titleAQIInfo">¿Qué es AQI?</string>
    <string name="titleVersion">📱Versión:</string>
    <string name="itemAQI">AQI</string>
    <string name="itemDistance">Distance</string>

    <!---AboutActivity-->
    <string name="whatsIsAireLibre">¿Qué es AireLibre?</string>
    <string name="descriptionWhatis">AireLibre es una respuesta de la comunidad a la necesidad de saber sobre la calidad del aire de manera libre, colaborativa y descentralizada.</string>
    <string name="questionInteresant">¿Querés saber más sobre el proyecto?</string>
    <string name="descriptionInteresant">Si querés colaborar,aprender a construir tu propio sensor, o saber en que se diferencia con otros proyectos similares Entrá:</string>
    <string name="seeMore">Ver proyecto</string>
    <string name="licenseAireLibre">AireLibre es un proyecto libre y de código abierto bajo licencia:</string>
    <string name="licenseAireLibreLink">AGPLv3</string>
    <string name="TitlelicenseLogo">Imagen Ilustrativa original de:</string>
    <string name="desciptionlicenseLogo">pch.vector - www.freepik.es</string>
    <string name="titleSocialMedia">Mantente al tanto de la contaminación del Aire en:</string>
    <string name="titleContributors">Contribuidores del proyecto</string>

    <!---ConfigActivity-->
    <string name="title_activity_config">ConfigActivity</string>
    <string name="titleConfig">Ajustes</string>
    <string name="titleSwitchLocation">Acceso a su ubicación:</string>
    <string name="titleSwitchTheme">Modo Oscuro:</string>
    <string name="descriptionWarningTheme">Actualmente la App toma la configuración del dispositivo\nsi lo modifica ya no tendrá en cuenta la configuración del dispositivo.</string>
    <string name="descriptionDenyLocation">Al rechazar las dos solicitudes de permiso.\ntendrá que permitir el acceso a su ubicación en \nAjustes -> Aplicaciones -> AireLibre -> Permisos/Accesos\n\nAceptar para ir a ajustes.</string>
    <string name="descriptionAcceptLocation">Al aceptar los permisos no podemos negarle tendra que ir en permisos a su ubicación en \nAjustes -> Aplicaciones -> AireLibre -> Permisos/Accesos\n\nAceptar para ir a ajustes.</string>
    <string name="titleMapCustom">Personaliza tu mapa:</string>

    <!---recyclerView-->
    <string name="tvLinkGo">Ver mas</string>
    <string name="tvNotify">Notificarme</string>
    <string name="tvNotifyEnable">Activo</string>
    <!---LazyColumn-->
    <string name="textTitleGreen">0-50 | Libre</string>
    <string name="textTitleYellow">51-100 | Maso</string>
    <string name="textTitleOrange">101-150 | No tan bien</string>
    <string name="textTitleRed">151-200 | Insalubre</string>
    <string name="textTitlePurple">201-300 | Muy insalubre</string>
    <string name="textTitleDanger">300+ | Peligroso</string>
    <!---LazyColumnTitleAQI-->
    <string name="titleGreen">Libre</string>
    <string name="titleYellow">Maso</string>
    <string name="titleOrange">No tan bien</string>
    <string name="titleRed">Insalubre</string>
    <string name="titlePurple">Muy insalubre</string>
    <string name="titleDanger">Peligroso</string>

    <!---links-->
    <string name="linkIcon">https://www.freepik.es/vector-gratis/familia-activa-feliz-caminando-al-aire-libre_7732632.htm</string>
    <string name="linkTwitter">https://twitter.com/KoaNdeAire</string>
    <string name="linkWebsite">https://airelib.re</string>
    <string name="linkGitHub">https://github.com/melizeche/AireLibre/#faq</string>
    <string name="linkLicense">https://es.wikipedia.org/wiki/GNU_Affero_General_Public_License</string>
    <string name="linkMastodon">https://terere.social/@AireLibre</string>

    <!---ContentDescriptions-->
    <string name="contentOnBack">OnBack</string>
    <string name="contentLogo">logoIcon</string>
    <string name="contentIconWarning">iconWarning</string>
    <string name="contentLocation">iconLocation</string>
    <string name="contentOnB">logoTheme</string>
    <string name="btnAccept">Aceptar</string>
    <string name="btnConfirm">Confirmar</string>
    <string name="btnCancel">Cancelar</string>
    <string name="btnTwitter">twitterBot</string>
    <string name="btnWebsite">webSite</string>

    <!---Emojis-->
    <string name="emojiWorld">🌎</string>
    <string name="emojiLicense">📜</string>

    <!---MapsNames-->
    <string name="mapDefault">Pred</string>
    <string name="mapSatellite">Satelital</string>
    <string name="mapUber">Uber</string>
    <string name="mapRetro">Retro</string>
    <string name="mapLightBlue">Celeste</string>
    <string name="mapBlue">Azul</string>
    <string name="mapCyber">Futurista</string>
    <string name="mapFallout">Fallout</string>
    <string name="mapGTA">GTA</string>

    <!---Dialog Cancel Notification-->
    <string name="titleDisableNotification">Quieres cancelar la notificación ?</string>

    <!---Dialog Configure Notification-->
    <string name="tvTitleConfigure">Configure su notificación</string>
    <string name="tvSelectDays">Seleccioné los días de la semana:</string>
    <string name="tvConfigNotifSettingTitle">Para un mejor funcionamiento, desactive la optimización de batería para esta app en la configuración de tu dispositivo:</string>

</resources>