<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginTop="5dp"
    android:layout_marginEnd="8dp"
    android:layout_marginBottom="10dp"
    android:background="@drawable/info_background"
    android:paddingTop="8dp"
    android:paddingBottom="12dp">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:background="@drawable/background_banner"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingEnd="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            app:srcCompat="@drawable/ic_sensors"
            app:tint="@color/white" />

        <TextView
            android:id="@+id/tv_title_sensor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:fontFamily="@font/rubik_bold"
            android:gravity="center"
            android:text="Surubi-i, Mariano"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView3"
            app:layout_constraintStart_toEndOf="@+id/imageView3"
            app:layout_constraintTop_toTopOf="@+id/imageView3" />
    </LinearLayout>


    <TextView
        android:id="@+id/tvState"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/rubik_bold"
        android:text="@string/tvStatus"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/btnGo"
        app:layout_constraintStart_toStartOf="@+id/btnGo"
        app:layout_constraintTop_toTopOf="@+id/tvTitleAQI" />

    <TextView
        android:id="@+id/stateIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/emojiGreen"
        android:textColor="#2E7D32"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/tvState"
        app:layout_constraintStart_toStartOf="@+id/tvState"
        app:layout_constraintTop_toBottomOf="@+id/tvState" />

    <TextView
        android:id="@+id/tvTitleAQI"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/rubik_bold"
        android:gravity="center"
        android:text="@string/tvEscale"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@+id/tvState"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDistance" />

    <TextView
        android:id="@+id/tvAQI"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/disket_regular"
        android:gravity="center"
        android:text="@string/emojiGreen"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/btnInfoAQI"
        app:layout_constraintStart_toStartOf="@+id/tvTitleAQI"
        app:layout_constraintTop_toBottomOf="@+id/tvTitleAQI" />

    <TextView
        android:id="@+id/tvDistance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:gravity="center"
        android:text="10km"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
        app:layout_constraintEnd_toStartOf="@+id/btnShare"
        app:layout_constraintTop_toTopOf="@+id/btnShare" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnNotify"
        style="@style/Widget.Material3.Button.OutlinedButton.Icon"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:fontFamily="@font/rubik_regular"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/tvNotify"
        android:textColor="@color/secondColor"
        android:textSize="11sp"
        android:visibility="gone"
        app:icon="@drawable/ic_notify_add"
        app:iconSize="14dp"
        app:iconTint="@color/secondColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/stateIcon"
        app:layout_constraintTop_toTopOf="@+id/tvState"
        app:strokeColor="@color/secondColor" />

    <Button
        android:id="@+id/btnGo"
        style="@style/Widget.Material3.Button.Icon"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/secondColor"
        android:fontFamily="@font/rubik_regular"
        android:text="@string/tvLinkGo"
        android:textColor="@color/white"
        android:textSize="11sp"
        app:icon="@drawable/ic_location_link"
        app:iconSize="14dp"
        app:iconTint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAQI"
        app:strokeColor="@color/secondColor" />


    <ImageView
        android:id="@+id/btnShare"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/background_circle_green"
        android:scaleType="centerInside"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_share"
        app:tint="@color/white" />

    <ImageView
        android:id="@+id/tvSensorTitle"
        android:layout_width="20dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/tvDistance"
        app:layout_constraintEnd_toStartOf="@+id/tvDistance"
        app:layout_constraintTop_toTopOf="@+id/tvDistance"
        app:srcCompat="@drawable/icon_distance_sensor" />

    <ImageButton
        android:id="@+id/btnInfoAQI"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginBottom="3dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/app_name"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toBottomOf="@+id/tvTitleAQI"
        app:layout_constraintStart_toEndOf="@+id/tvTitleAQI"
        app:layout_constraintTop_toTopOf="@+id/tvTitleAQI"
        app:srcCompat="@drawable/ic_info_aqi"
        app:tint="@color/black"
        tools:ignore="TouchTargetSizeCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>